[package]
name = "pesh"
version = "0.1.0"
authors = ["Michael Krolikowski <mkroli@yahoo.de>"]
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
log = "0.4"
fern = "0.6"
chrono = "0.4"
error-chain = "0.12"
clap = "2"
rustyline = "6"
nom = "5"
prometheus = "0.13"
prometheus_exporter = "0.6"
lazy_static = "1"
app_dirs = "1"
cedarwood = "0.4"
